--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,10 +20,10 @@ jobs:
       ref: master
 
   steps:
-  - uses: actions/checkout@v2
-  - uses: actions/setup-node@v2
+  - name: 'initialize node'
+    uses: actions/setup-node@v2
     with:
       node-version: '14'
-  - run: yarn
-  - run: yarn build
-  - run: yarn test
+    run: yarn
+    run: yarn build
+    run: yarn test
