--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14'
-      run: yarn
-      run: yarn build
+      run: yarn && yarn build
+
+    - name: 'test'  
       run: yarn test
