chore: update action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14'
+
+    - name: 'packages'
       run: yarn && yarn build
 
     - name: 'test'  
