chore: update action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,8 @@ jobs:
       with:
         node-version: '14'
 
-    - name: 'packages'
-      run: yarn && yarn build
+    - name: 'install deps'
+      run: yarn && yarn lint
 
     - name: 'test'  
       run: yarn test
